# differ

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  examples.sh  pyproject.toml  run_server.sh  test_app.py  utils.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: DiffViewer.jsx  Header.jsx  InputSection.jsx  ResultsSection.jsx
frontend/src/lib/: api.js  diff.js
nginx/: nginx.conf
